<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rs_search" />
        <TextView
            android:id="@+id/tv_Rs_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/frg_result_search"
            android:textColor="@color/colorBgEdt"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Rs_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/frg_result_search"
            android:textStyle="italic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_ok"
            tools:ignore="ButtonStyle">
        </Button>
        <Button
            android:id="@+id/dialog_btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_no"
            tools:ignore="ButtonStyle">

        </Button>
    </LinearLayout>

</LinearLayout>